--- a/array/index.html
+++ b/array/index.html
@@ -62,6 +62,12 @@ const fields = {
 console.log(getNumbersSumm(fields))
 </pre>
 
-<script src="getNumbersSumm.js"></script>
+<script src="task1.js"></script>
+<script src="task2.js"></script>
+<script src="task3.js"></script>
+<script src="task4.js"></script>
+<script src="task5.js"></script>
+<script src="task6.js"></script>
+<script src="task7.js"></script>
 </body>
 </html>
